--- a/src/styles/_board.scss
+++ b/src/styles/_board.scss
@@ -28,6 +28,22 @@ $border-color: #ddd;
 					.hidden{
 						display: none;
 					}
+
+					.submit{
+					  font-size: 12px;
+					  padding: 5px 10px;
+					  color: #555;
+					  background: #f7f7f7;
+					  border-radius: 0px;
+					  border: 1px solid darken(#f7f7f7, 20%);
+					  cursor: pointer;
+					  outline: none;
+
+					  &:hover{
+					  	background: darken(#f7f7f7, 10%);
+					  	transition: all ease-in-out 400ms;
+					  }
+					}
 				}
 			}
 
