--- a/public/style.css
+++ b/public/style.css
@@ -4,35 +4,10 @@ body {
   font-family: sans-serif; }
 
 .App {
-  margin: 30px 10px;
-  text-align: center; }
-
-.grid {
-  width: 100%;
-  display: inline-block;
-  padding: 5px; }
-
-.column {
-  width: 14.25%;
-  display: inline-block; }
-
-.admin-prompt {
-  margin-bottom: 20px; }
-  .admin-prompt h4 {
-    display: inline-block;
-    vertical-align: middle;
-    margin-right: 30px;
-    font-weight: 400; }
-    .admin-prompt h4 span {
-      text-shadow: 1px 1px 2px #000;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-      font-weight: 700; }
-    .admin-prompt h4 .player-0 {
-      color: yellow; }
-    .admin-prompt h4 .player-1 {
-      color: red; }
-  .admin-prompt .popup {
+  margin: 50px auto 0;
+  text-align: center;
+  max-width: 600px; }
+  .App .popup {
     position: absolute;
     z-index: 99;
     left: 0;
@@ -44,13 +19,9 @@ body {
     max-width: 250px;
     margin: 0 auto;
     box-shadow: 5px 6px 20px rgba(0, 0, 0, 0.5); }
-    .admin-prompt .popup.player-0 {
-      border: 4px dashed yellow; }
-    .admin-prompt .popup.player-1 {
-      border: 4px dashed red; }
-    .admin-prompt .popup h3 {
+    .App .popup h3 {
       font-weight: 400; }
-    .admin-prompt .popup button {
+    .App .popup button {
       font-size: 14px;
       padding: 7px 15px;
       color: #000;
@@ -58,156 +29,142 @@ body {
       border-radius: 0px;
       border: 1px solid #c4c4c4;
       cursor: pointer; }
-  .admin-prompt .submit {
-    font-size: 14px;
-    padding: 7px 15px;
-    color: #000;
+  .App .admin-bar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
     background: #f7f7f7;
-    border-radius: 0px;
-    border: 1px solid #c4c4c4;
-    cursor: pointer; }
-    .admin-prompt .submit:hover {
-      background: #eaeaea; }
-
-.grid .heading, .grid .square button {
-  font-size: 0; }
-
-@media all and (min-width: 767px) {
-  .App {
-    margin: 30px; } }
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+    font-size: 12px; }
+    .App .admin-bar .item {
+      padding: 5px 10px;
+      display: inline-block; }
+    .App .admin-bar .score {
+      display: inline-block;
+      background: #fb8383;
+      border: 1px solid #e43636;
+      color: #fff;
+      font-weight: 300;
+      margin-right: 25px; }
+      .App .admin-bar .score .item {
+        padding: 5px 10px;
+        display: inline-block; }
+        .App .admin-bar .score .item.player1 {
+          border-right: 1px solid #e43636; }
+      .App .admin-bar .score .label {
+        padding: 5px; }
 
 .board {
-  max-width: 560px;
-  width: 100%;
-  position: relative;
-  padding: 0px;
-  margin: 0 auto;
-  box-sizing: border-box; }
-  .board .leg {
-    display: none;
-    position: absolute;
-    height: 110%;
-    width: 15px;
-    background: #2451a4;
-    top: -2px; }
-    .board .leg.left {
-      left: 0; }
-    .board .leg.right {
-      right: 0;
-      box-shadow: 5px 0px 0px #163265;
-      z-index: 10; }
-      .board .leg.right:after {
-        content: "";
-        top: 0;
-        width: 0;
-        height: 0;
-        position: absolute;
-        right: -5px;
-        border-left: 5px solid transparent;
-        border-right: 0px solid transparent;
-        border-top: 5px solid #fff; }
-    .board .leg .base {
-      width: 0px;
-      height: 0px;
-      position: absolute;
-      bottom: 0; }
-      .board .leg .base:after {
-        content: "";
-        width: 0px;
-        height: 0px;
-        position: absolute;
-        bottom: 0;
-        right: -41px;
-        border-left: 0px solid transparent;
-        border-right: 26px solid transparent;
-        border-bottom: 315px solid #163265; }
-      .board .leg .base:before {
-        content: "";
-        width: 0px;
-        height: 0px;
-        position: absolute;
-        bottom: 0;
-        right: -15px;
-        border-left: 10px solid transparent;
-        border-right: 12px solid transparent;
-        border-bottom: 235px solid #2451a4; }
-      .board .leg .base .corner {
-        width: 0px;
-        height: 0px;
-        position: absolute;
-        bottom: 0; }
-        .board .leg .base .corner:after {
-          content: "";
-          width: 0px;
-          height: 0px;
-          position: absolute;
-          bottom: 0;
-          right: -41px;
-          border-left: 26px solid transparent;
-          border-right: 0px solid transparent;
-          border-bottom: 50px solid #fff;
-          z-index: 9; }
+  padding: 20px;
+  display: inline-block;
+  text-align: left; }
+  .board .turns {
+    display: table; }
+    .board .turns .turn {
+      display: table-row; }
+      .board .turns .turn .turnNum, .board .turns .turn .code, .board .turns .turn .feedback {
+        display: table-cell;
+        vertical-align: middle;
+        padding-left: 15px;
+        padding-right: 15px;
+        border-bottom: 1px solid #ddd; }
+      .board .turns .turn.active .turnNum, .board .turns .turn.active .code, .board .turns .turn.active .feedback {
+        border-bottom: 0px; }
+      .board .turns .turn.active form .hidden {
+        display: none; }
+      .board .turns .turn.active form .submit {
+        font-size: 12px;
+        padding: 5px 10px;
+        color: #555;
+        background: #f7f7f7;
+        border-radius: 0px;
+        border: 1px solid #c4c4c4;
+        cursor: pointer;
+        outline: none; }
+        .board .turns .turn.active form .submit:hover {
+          background: #dedede;
+          transition: all ease-in-out 400ms; }
+      .board .turns .turn .turnNum, .board .turns .turn .code {
+        border-right: 1px solid #ddd; }
 
-.grid {
-  background: #2a5fc1;
-  box-sizing: border-box;
-  position: relative;
-  z-index: 9;
-  border-bottom: 3px solid #163265; }
-
-@media all and (min-width: 767px) {
-  .board {
-    padding: 0 15px; }
-    .board .leg {
-      display: block; } }
-
-.square {
-  font-size: 0;
-  padding: 5px; }
-  .square button {
-    width: 100%;
-    border-radius: 0;
-    border-style: none;
-    background: #1c4082;
-    margin: 0px;
-    outline: none;
+.code {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  font-size: 0; }
+  .code .peg {
+    width: 25px;
+    height: 25px;
+    box-sizing: border-box;
+    display: inline-block;
     border-radius: 50%;
+    margin: 0 25px;
     position: relative; }
-    .square button:before {
-      content: "";
-      background: #fff;
+    .code .peg .right, .code .peg .left {
       position: absolute;
-      width: 95%;
-      height: 95%;
-      left: 5%;
-      top: 5%;
+      background: transparent;
+      padding: 0;
+      top: 3px;
+      width: 0;
+      height: 0;
+      border-top: 7px solid transparent;
+      border-bottom: 7px solid transparent;
+      cursor: pointer;
+      z-index: 999;
+      outline: none; }
+    .code .peg .right {
+      right: -15px;
+      border-left: 7px solid #ddd;
+      border-right: none; }
+      .code .peg .right:hover {
+        border-left: 7px solid #000; }
+    .code .peg .left {
+      left: -15px;
+      border-right: 7px solid #ddd;
+      border-left: none; }
+      .code .peg .left:hover {
+        border-right: 7px solid #000; }
+    .code .peg.peg-0 {
+      background: #f7f7f7;
+      border: 2px solid #eaeaea; }
+    .code .peg.peg-1 {
+      background: #4ECDC4;
+      border: 2px solid #3ac7bd; }
+    .code .peg.peg-2 {
+      background: #B4FF8C;
+      border: 2px solid #a3ff73; }
+    .code .peg.peg-3 {
+      background: #FF6B6B;
+      border: 2px solid #ff5252; }
+    .code .peg.peg-4 {
+      background: #FFE66D;
+      border: 2px solid #ffe254; }
+    .code .peg.peg-5 {
+      background: #BF93BD;
+      border: 2px solid #b683b3; }
+    .code .peg.peg-6 {
+      background: #1A535C;
+      border: 2px solid #144148; }
+
+.feedback {
+  font-size: 0;
+  padding: 0; }
+  .feedback .peg {
+    width: 35%;
+    display: inline-block;
+    text-align: center;
+    padding: 3px 0; }
+    .feedback .peg span {
+      width: 12px;
+      height: 12px;
+      box-sizing: border-box;
+      display: inline-block;
       border-radius: 50%;
-      cursor: pointer; }
-    .square button:after {
-      padding-top: 102%;
-      display: block;
-      content: ''; }
-    .square button.active:before {
-      content: "";
-      position: absolute;
-      width: 99%;
-      height: 99%;
-      left: 1%;
-      top: 1%;
-      box-sizing: border-box; }
-    .square button.active.player-0:before {
-      content: "";
-      background: yellow;
-      position: absolute;
-      border: 7px solid #dbdb00; }
-    .square button.active.player-1:before {
-      content: "";
-      background: red;
-      position: absolute;
-      border: 7px solid #db0000; }
-    .square button.active.winning-square:before {
-      content: "";
-      background: #12ff12;
-      position: absolute;
-      border: 7px solid #00ed00;
-      box-sizing: border-box; }
+      padding: 2px; }
+    .feedback .peg.peg-1 span {
+      background: #fff;
+      border: 2px solid #000; }
+    .feedback .peg.peg-2 span {
+      background: #000;
+      border: 2px solid #000; }
