--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -5,9 +5,8 @@ body {
 }
 
 .App{
-  margin: 30px auto;
+  margin: 50px auto 0;
   text-align: center;
-  max-width: 600px;
 
   .popup{
     position: absolute;
@@ -34,6 +33,62 @@ body {
       border-radius: 0px;
       border: 1px solid darken(#f7f7f7, 20%);
       cursor: pointer;
+    }
+  }
+
+  .admin-bar{
+  	position: fixed;
+  	top: 0;
+  	left: 0;
+  	width: 100%;
+  	background: #f7f7f7;
+  	border-bottom: 1px solid #ddd;
+  	padding: 10px 5px;
+  	font-size: 11px;
+
+  	.item{
+			padding: 5px 5px;
+	    display: inline-block;
+  	}
+
+  	.score{
+  		display: inline-block;
+			background: #fb8383;
+			border: 1px solid #e43636;
+			color: #fff;
+			font-weight: 300;
+			margin-right: 5px;
+
+			.item{
+				padding: 5px 10px;
+		    display: inline-block;
+
+		    &.player1{
+		    	border-right: 1px solid #e43636;
+		    }
+			}
+
+			.label{
+				padding: 5px;
+			}
+  	}
+  }
+}
+
+@media all and (min-width: 480px){
+  .App{
+    margin: 50px auto 0;
+
+    .admin-bar{
+      font-size: 12px;
+
+      > .item{
+        margin-left: 25px;
+      }
+
+      .score{
+        margin-right: 10px;
+      }
     }
   }
 }
