--- a/src/styles/_pegs.scss
+++ b/src/styles/_pegs.scss
@@ -10,48 +10,42 @@ $color6:#1A535C;
 	padding-top: 15px;
 	padding-bottom: 15px;
 	font-size: 0;
+	box-sizing: border-box;
+	width: 100%;
+
+	.peg-holder{
+		width: 25%;
+		text-align: center;
+		display: inline-block;
+		vertical-align: middle;
+		padding: 0px 5px;
+		box-sizing: border-box;
+		position: relative;
+	}
 
 	.peg{
-		width: 25px;
-    height: 25px;
+		width: 100%;
+    height: auto;
+    padding: 45%;
     box-sizing: border-box;
     display: inline-block;
     border-radius: 50%;
-    margin: 0 25px;
-		position: relative;
 
-		.right,.left{
+		.right, .left{
 			position: absolute;
 			background: transparent;
 			padding: 0;
-			top: 3px;
-			width: 0;
-			height: 0;
-			border-top: 7px solid transparent;
-			border-bottom: 7px solid transparent;
-			cursor: pointer;
+			top: 0;
+			right: 0;
+			width: 100%;
+			height: 100%;
 			z-index: 999;
 			outline: none;
-		}
-
-		.right{
-			right: -15px;
-			border-left: 7px solid #ddd;
-			border-right: none;
-
-			&:hover{
-				border-left: 7px solid #000;
-			}
+			border: none;
 		}
 
 		.left{
-			left: -15px;
-			border-right: 7px solid #ddd;
-			border-left: none;
-
-			&:hover{
-				border-right: 7px solid #000;
-			}
+			display: none;
 		}
 
     &.peg-0{
@@ -111,6 +105,86 @@ $color6:#1A535C;
 		&.peg-2 span{
 			background: #000;
 			border: 2px solid #000;
+		}
+	}
+}
+
+@media all and (min-width: 480px){
+	.code{
+		.peg-holder{
+			padding: 15px;
+		}
+
+		.peg{
+			margin: 0 auto;
+		}
+	}
+}
+
+@media all and (min-width: 767px){
+	.code{
+		padding: 0; 
+
+		.peg-holder{
+			padding: 20px 30px; 
+		}
+
+		.peg{
+			width: 100%;
+	    height: auto;
+	    padding: 45%;
+	    box-sizing: border-box;
+	    display: inline-block;
+	    border-radius: 50%;
+
+			.right,.left{
+				width: 50%;
+				height: 100%;
+				display: block;
+				cursor: pointer;
+
+				&:after{
+					position: absolute;
+					content: "";
+					width: 0;
+					height: 0;
+					top: 50%;
+					transform: translateY(-50%);
+					border-top: 7px solid transparent;
+					border-bottom: 7px solid transparent;
+					cursor: pointer;
+				}
+			}
+
+			.right{
+				&:after{
+					right: 25%;
+					border-left: 7px solid #ddd;
+					border-right: none;
+				}
+
+				&:hover{
+					&:after{
+						border-left: 7px solid #000;
+					}
+				}
+			}
+
+			.left{
+				left: 0;
+
+				&:after{
+					left: 25%;
+					border-right: 7px solid #ddd;
+					border-left: none;
+				}
+
+				&:hover{
+					&:after{
+						border-right: 7px solid #000;
+					}
+				}
+			}
 		}
 	}
 }
