show computer pattern on complete and add animation

--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -9,13 +9,13 @@ body {
   text-align: center;
 
   .popup{
-    position: absolute;
+    position: fixed;
     z-index: 99;
     left: 0;
     right: 0;
     top: 50%;
     transform: translateY(-50%);
-    background: rgba(255,255,255,.5);
+    background: rgba(255,255,255,.8);
     padding: 40px;
     max-width: 250px;
     margin: 0 auto;
@@ -34,10 +34,15 @@ body {
       border: 1px solid darken(#f7f7f7, 20%);
       cursor: pointer;
     }
+
+    .code .peg-holder{
+      padding: 10px 15px;
+    }
   }
 
   .admin-bar{
   	position: fixed;
+    z-index: 9;
   	top: 0;
   	left: 0;
   	width: 100%;
