--- a/public/style.css
+++ b/public/style.css
@@ -5,8 +5,7 @@ body {
 
 .App {
   margin: 50px auto 0;
-  text-align: center;
-  max-width: 600px; }
+  text-align: center; }
   .App .popup {
     position: absolute;
     z-index: 99;
@@ -30,16 +29,16 @@ body {
       border: 1px solid #c4c4c4;
       cursor: pointer; }
   .App .admin-bar {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     background: #f7f7f7;
     border-bottom: 1px solid #ddd;
-    padding: 10px;
-    font-size: 12px; }
+    padding: 10px 5px;
+    font-size: 11px; }
     .App .admin-bar .item {
-      padding: 5px 10px;
+      padding: 5px 5px;
       display: inline-block; }
     .App .admin-bar .score {
       display: inline-block;
@@ -47,7 +46,7 @@ body {
       border: 1px solid #e43636;
       color: #fff;
       font-weight: 300;
-      margin-right: 25px; }
+      margin-right: 5px; }
       .App .admin-bar .score .item {
         padding: 5px 10px;
         display: inline-block; }
@@ -56,12 +55,23 @@ body {
       .App .admin-bar .score .label {
         padding: 5px; }
 
+@media all and (min-width: 480px) {
+  .App {
+    margin: 50px auto 0; }
+    .App .admin-bar {
+      font-size: 12px; }
+      .App .admin-bar > .item {
+        margin-left: 25px; }
+      .App .admin-bar .score {
+        margin-right: 10px; } }
+
 .board {
-  padding: 20px;
+  padding: 20px 5px;
   display: inline-block;
   text-align: left; }
   .board .turns {
-    display: table; }
+    display: table;
+    max-width: 600px; }
     .board .turns .turn {
       display: table-row; }
       .board .turns .turn .turnNum, .board .turns .turn .code, .board .turns .turn .feedback {
@@ -89,42 +99,47 @@ body {
       .board .turns .turn .turnNum, .board .turns .turn .code {
         border-right: 1px solid #ddd; }
 
+@media all and (min-width: 767px) {
+  .board {
+    padding: 25px; }
+    .board .turns .turn .turnNum, .board .turns .turn .feedback {
+      padding-left: 25px;
+      padding-right: 25px; } }
+
 .code {
   padding-top: 15px;
   padding-bottom: 15px;
-  font-size: 0; }
+  font-size: 0;
+  box-sizing: border-box;
+  width: 100%; }
+  .code .peg-holder {
+    width: 25%;
+    text-align: center;
+    display: inline-block;
+    vertical-align: middle;
+    padding: 0px 5px;
+    box-sizing: border-box;
+    position: relative; }
   .code .peg {
-    width: 25px;
-    height: 25px;
+    width: 100%;
+    height: auto;
+    padding: 45%;
     box-sizing: border-box;
     display: inline-block;
-    border-radius: 50%;
-    margin: 0 25px;
-    position: relative; }
+    border-radius: 50%; }
     .code .peg .right, .code .peg .left {
       position: absolute;
       background: transparent;
       padding: 0;
-      top: 3px;
-      width: 0;
-      height: 0;
-      border-top: 7px solid transparent;
-      border-bottom: 7px solid transparent;
-      cursor: pointer;
+      top: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
       z-index: 999;
-      outline: none; }
-    .code .peg .right {
-      right: -15px;
-      border-left: 7px solid #ddd;
-      border-right: none; }
-      .code .peg .right:hover {
-        border-left: 7px solid #000; }
+      outline: none;
+      border: none; }
     .code .peg .left {
-      left: -15px;
-      border-right: 7px solid #ddd;
-      border-left: none; }
-      .code .peg .left:hover {
-        border-right: 7px solid #000; }
+      display: none; }
     .code .peg.peg-0 {
       background: #f7f7f7;
       border: 2px solid #eaeaea; }
@@ -168,3 +183,51 @@ body {
     .feedback .peg.peg-2 span {
       background: #000;
       border: 2px solid #000; }
+
+@media all and (min-width: 480px) {
+  .code .peg-holder {
+    padding: 15px; }
+  .code .peg {
+    margin: 0 auto; } }
+
+@media all and (min-width: 767px) {
+  .code {
+    padding: 0; }
+    .code .peg-holder {
+      padding: 20px 30px; }
+    .code .peg {
+      width: 100%;
+      height: auto;
+      padding: 45%;
+      box-sizing: border-box;
+      display: inline-block;
+      border-radius: 50%; }
+      .code .peg .right, .code .peg .left {
+        width: 50%;
+        height: 100%;
+        display: block;
+        cursor: pointer; }
+        .code .peg .right:after, .code .peg .left:after {
+          position: absolute;
+          content: "";
+          width: 0;
+          height: 0;
+          top: 50%;
+          transform: translateY(-50%);
+          border-top: 7px solid transparent;
+          border-bottom: 7px solid transparent;
+          cursor: pointer; }
+      .code .peg .right:after {
+        right: 25%;
+        border-left: 7px solid #ddd;
+        border-right: none; }
+      .code .peg .right:hover:after {
+        border-left: 7px solid #000; }
+      .code .peg .left {
+        left: 0; }
+        .code .peg .left:after {
+          left: 25%;
+          border-right: 7px solid #ddd;
+          border-left: none; }
+        .code .peg .left:hover:after {
+          border-right: 7px solid #000; } }
